# linkedin

./: README.md  Task.md  pyproject.toml  steps.md
.cursor/rules/: project_rules.md
backend/: .env  init_db.py  requirements.txt
backend/config/: settings.yaml
backend/src/: app.py  models.py
backend/src/routers/: auth.py  profile.py
backend/src/services/: linkedin.py
backend/utils/: config.py
documentation/: bugtracking.md  implementation.md  plan.md  prd.md  project_structure.md  uiux.md  workflow.md
